--- a/songs/potionforlove.html
+++ b/songs/potionforlove.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
-<title>Potion for Love</title>
+<title>Potion For Love</title>
 <link rel = "icon" href="../media/icon.jpg" type="image/x-icon">
 
 <Style>
