--- a/songs/potionforlove.html
+++ b/songs/potionforlove.html
@@ -4,7 +4,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
 <title>Potion For Love</title>
-<link rel = "icon" href="../media/icon.jpg" type="image/x-icon">
+<link rel = "icon" href="/media/icon.jpg" type="image/x-icon">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <Style>
 	* {
@@ -92,7 +100,7 @@ p{
 		
 <div class="container">
 	<div class="row">
-		<div class="column" style="background-color:#000;">
+		<div class="col-sm-1 col-md-1 col-lg-4">
 			<h3>Potion For love</h3>
 			<p>When I lay in your arms, and our worlds can collide</p> 
 			<p>Into one atmosphere, we are here 'till we're not</p>
@@ -122,9 +130,9 @@ p{
 			<br>
 			<p>I don't feel love anymore</p>
 			<p>And how it hurts when you walk out of the door</p>
-			<p>Forgetting why we fell in love, hurts me the most</p>	
+			<p>Forgetting why we fell in love, hurts me the most</p>
 		</div>
-		<div class="column" style="background-color:#000;">
+		<div class="col-sm-1 col-md-1 col-lg-4">
 			<h3>Poción de amor</h3>
 
 			<p>Cuando me acuesto en tus brazos, y nuestros mundos pueden chocar</p>
@@ -159,7 +167,7 @@ p{
 			<p>Y como duele cuando sales por la puerta</p>
 			<p>Olvidar por qué nos enamoramos, me duele más</p>
 		</div>
-		<div class="column" style="background-color:#000;">
+		<div class="col-sm-1 col-md-1 col-lg-4">
 			<h3>Trank für die Liebe</h3>
 
 			<p>Wenn ich in deinen Armen liege und unsere Welten kollidieren können</p>
@@ -191,10 +199,10 @@ p{
 			<p>Ich fühle keine Liebe mehr</p>
 			<p>Und wie es weh tut, wenn du aus der Tür gehst</p>
 			<p>Zu vergessen, warum wir uns verliebt haben, tut mir am meisten weh</p>
-		</div>
-		</div>
+		</div>    
 	</div>
 </div>
+
 <div class="container">
 	<h2>-Aurora Aksnes (July 9, 2021)</h2>
 	<h6>
