--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
 <title>Potion for Love</title>
-<link rel = "icon" href="icon.jpg" type="image/x-icon">
+<link rel = "icon" href="/media/icon.jpg" type="image/x-icon">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <Style>
 	* {
@@ -34,7 +40,7 @@
 body{
 	font-family: Helvetica;
 	font-size: 16px;
-	margin: 0;
+    font-weight: bolder;
 	background: #000;
 	min-height: 100vh;
 	background:#000;
@@ -71,6 +77,10 @@ h6{
 h3{
 	color: #fff;
 }
+h4{
+    text-align: center;
+	color: #fff;
+}
 h5{
 	color: #fff;
 }
@@ -81,65 +91,35 @@ p{
 
 .container{
 	text-align: center;
+    padding: 4%;
 }
 .column{
     padding: 4%;
+}
+.card-action{
+    text-align: center;
 }
 
 </Style>
 </head>
 <body>
-	
-<div class="container">
-	<div class="row">
-		<div class="column" style="background-color:#000;">
-                        <div class="row">
-                            <div class="col s12 m6">
-                            <div class="card blue-grey darken-1">
-                                <div class="card-content white-text">
-                                <span class="card-title">Potion For Love</span>
-                                <h1>Potion For love</h1>
-                                </div>
-                                <div class="card-action">
-                                    <button onclick="window.location.href='./songs/potionforlove.html'">Listen</button>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-		</div>
-		<div class="column" style="background-color:#000;">
-                        <div class="row">
-                            <div class="col s12 m6">
-                            <div class="card blue-grey darken-1">
-                                <div class="card-content white-text">
-                                <span class="card-title">Potion For Love</span>
-                                <h1>This Could Be A Dream</h1>
-                                </div>
-                                <div class="card-action">
-                                    <button onclick="window.location.href='./songs/thiscouldbeadream.html'">Listen</button>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-		</div>
-		<div class="column" style="background-color:#000;">
-                        <div class="row">
-                            <div class="col s12 m6">
-                            <div class="card blue-grey darken-1">
-                                <div class="card-content white-text">
-                                <span class="card-title">Potion For Love</span>
-                                <h1>Work in progress...</h1>
-                                </div>
-                                <div class="card-action">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-		</div>
-		</div>
-	</div>
-</div>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-1 col-md-1 col-lg-4">
+                    <h1>Potion For love</h1>
+                    <br>
+                    <button onclick="window.location.href='./songs/potionforlove.html'">Listen</button>
+            </div>
+            <div class="col-sm-1 col-md-1 col-lg-4">
+                    <h1>This Could Be A Dream</h1>
+                    <br>
+                    <button onclick="window.location.href='./songs/thiscouldbeadream.html'">Listen</button>
+            </div>
+            <div class="col-sm-1 col-md-1 col-lg-4">
+                    <h4>Work in progress...</h4>
+            </div>    
+        </div>
+    </div>
 
 <div class="container">
 	<h2>-a page made by Warrior222</h2>
