--- a/songs/thiscouldbeadream.html
+++ b/songs/thiscouldbeadream.html
@@ -4,7 +4,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
 <title>This Could Be a Dream</title>
-<link rel = "icon" href="../media/icon.jpg" type="image/x-icon">
+<link rel = "icon" href="/media/icon.jpg" type="image/x-icon">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <Style>
 	* {
