responsive desing integrated

--- a/songs/thiscouldbeadream.html
+++ b/songs/thiscouldbeadream.html
@@ -77,9 +77,11 @@ p{
 	color: #fff;
 	font-size: smaller;
 }
-
 .container{
 	text-align: center;
+}
+.col-1{
+	padding: 6%;
 }
 
 </Style>
@@ -100,7 +102,7 @@ p{
 
 <div class="container">
 	<div class="row">
-		<div class="col-sm-1 col-md-1 col-lg-4">
+		<div class="col-1 col-lg-4">
 			<h3>This Could Be a Dream</h3>
 
 			<p>Look up at the light</p> 
@@ -151,7 +153,7 @@ p{
 			<p>I know I'm not alone</p> 
 			<p>And if you would come could you take me home?</p> 
 		</div>
-		<div class="col-sm-1 col-md-1 col-lg-4">
+		<div class="col-1 col-lg-4">
 			<h3>Esto Podria Ser Un Sueño</h3>
             
 			<p>Mira la luz</p> 
@@ -199,7 +201,7 @@ p{
             <p>Sé que no estoy sola</p>
             <p>Y si vuelves, ¿podrías llevarme a casa?</p>
 		</div>
-		<div class="col-sm-1 col-md-1 col-lg-4">
+		<div class="col-1 col-lg-4">
 			<h3>Es könnte ein Traum sein</h3>
                      
 			<p>Schau nach oben, auf das Licht</p> 
