--- a/index.html
+++ b/index.html
@@ -99,23 +99,26 @@ p{
 .card-action{
     text-align: center;
 }
+.col-1{
+	padding: 6%;
+}
 
 </Style>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-1 col-md-1 col-lg-4">
+            <div class="col-1 col-lg-4">
                     <h1>Potion For love</h1>
                     <br>
                     <button onclick="window.location.href='./songs/potionforlove.html'">Listen</button>
             </div>
-            <div class="col-sm-1 col-md-1 col-lg-4">
+            <div class="col-1 col-lg-4">
                     <h1>This Could Be A Dream</h1>
                     <br>
                     <button onclick="window.location.href='./songs/thiscouldbeadream.html'">Listen</button>
             </div>
-            <div class="col-sm-1 col-md-1 col-lg-4">
+            <div class="col-1 col-lg-4">
                     <h4>Work in progress...</h4>
             </div> 
         </div>
