--- a/index.html
+++ b/index.html
@@ -64,15 +64,9 @@ h1{
 	color: #fff;
 	margin: 2%;
 }
-h2{
+h6{
 	text-align: right;
 	color: #fff;
-	margin: 2%;
-}
-h6{
-	text-align: center;
-	color: #fff;
-	margin: 2%;
 }
 h3{
 	color: #fff;
@@ -91,7 +85,7 @@ p{
 
 .container{
 	text-align: center;
-    padding: 4%;
+    padding: 1%;
 }
 .column{
     padding: 4%;
@@ -100,12 +94,16 @@ p{
     text-align: center;
 }
 .col-1{
-	padding: 6%;
+	padding: 2%;
 }
 
 </Style>
 </head>
 <body>
+    <div class="container">
+        <img src="media/AURORA.png" class="center" width="20%" />
+    </div>
+    
     <div class="container">
         <div class="row">
             <div class="col-1 col-lg-4">
@@ -119,16 +117,27 @@ p{
                     <button onclick="window.location.href='./songs/thiscouldbeadream.html'">Listen</button>
             </div>
             <div class="col-1 col-lg-4">
-                    <h4>Work in progress...</h4>
+					<h1>I Went Too Far</h1>
+                    <br>
+                    <button onclick="window.location.href='./songs/iwenttoofar.html'">Listen</button>
+            </div> 
+        </div>
+    </div>
+	<div class="container">
+        <div class="row">
+            <div class="col-1 col-lg-4">
+				<h4>Work in progress...</h4>
+            </div>
+            <div class="col-1 col-lg-4">
+            </div>
+            <div class="col-1 col-lg-4">
             </div> 
         </div>
     </div>
 
 <div class="container">
-	<h2>-a page made by Warrior222</h2>
-    <br>
-    <br>
-    <br>
+	<h6>-a page made by Warrior222</h6>
+    <img src="media/63.gif" alt="this slowpoke moves"  width="50%" />
     <h5>
     AURORA &copy; Copyright. All Rights Reserved
     </h5>
