change of desing and new song

--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@ p{
     
     <div class="container">
         <div class="row">
-            <div class="col-1 col-lg-4">
+            <div class="col-1 col-md-4">
                     <h1>Potion For love</h1>
                     <br>
                     <button onclick="window.location.href='./songs/potionforlove.html'">Listen</button>
             </div>
-            <div class="col-1 col-lg-4">
+            <div class="col-1 col-md-4">
                     <h1>This Could Be A Dream</h1>
                     <br>
                     <button onclick="window.location.href='./songs/thiscouldbeadream.html'">Listen</button>
             </div>
-            <div class="col-1 col-lg-4">
+            <div class="col-1 col-md-4">
 					<h1>I Went Too Far</h1>
                     <br>
                     <button onclick="window.location.href='./songs/iwenttoofar.html'">Listen</button>
@@ -125,12 +125,15 @@ p{
     </div>
 	<div class="container">
         <div class="row">
-            <div class="col-1 col-lg-4">
-				<h4>Work in progress...</h4>
+            <div class="col-1 col-md-4">
+				<h1>Exist For Love</h1>
+                <br>
+                <button onclick="window.location.href='./songs/existforlove.html'">Listen</button>
             </div>
-            <div class="col-1 col-lg-4">
+            <div class="col-1 col-md-4">
+                <h4>Work in progress...</h4>
             </div>
-            <div class="col-1 col-lg-4">
+            <div class="col-1 col-md-4">
             </div> 
         </div>
     </div>
