--- a/songs/iwenttoofar.html
+++ b/songs/iwenttoofar.html
@@ -106,7 +106,7 @@ p{
 
 <div class="container">
 	<div class="row">
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
             <!-- LETRA EN INGLES -->
 			<h3>I Went Too Far</h3>
 			<br>
@@ -154,7 +154,7 @@ p{
 			I couldn't stay, I had to walk away</p> 
  
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
             <!-- LETRA EN ESPAÑOL -->
 			<h3>Fui demasiado lejos</h3>
             <br>
@@ -202,7 +202,7 @@ p{
 			No podía quedarme, tuve que marcharme</p>
 			
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
             <!-- LETRA EN ALEMAN -->
 			<h3>Ich ging zu weit</h3>
 			<br>
