--- a/songs/potionforlove.html
+++ b/songs/potionforlove.html
@@ -102,7 +102,7 @@ p{
 		
 <div class="container">
 	<div class="row">
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
 			<h3>Potion For love</h3>
 			<p>When I lay in your arms, and our worlds can collide</p> 
 			<p>Into one atmosphere, we are here 'till we're not</p>
@@ -134,7 +134,7 @@ p{
 			<p>And how it hurts when you walk out of the door</p>
 			<p>Forgetting why we fell in love, hurts me the most</p>
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
 			<h3>Poción de amor</h3>
 
 			<p>Cuando me acuesto en tus brazos, y nuestros mundos pueden chocar</p>
@@ -169,7 +169,7 @@ p{
 			<p>Y como duele cuando sales por la puerta</p>
 			<p>Olvidar por qué nos enamoramos, me duele más</p>
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
 			<h3>Trank für die Liebe</h3>
 
 			<p>Wenn ich in deinen Armen liege und unsere Welten kollidieren können</p>
