--- a/songs/template.html
+++ b/songs/template.html
@@ -106,21 +106,21 @@ p{
 
 <div class="container">
 	<div class="row">
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
             <!-- LETRA EN INGLES -->
 			<!-- <h3>This Could Be a Dream</h3>
 
 			<p>Look up at the light</p>  -->
  
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
             <!-- LETRA EN ESPAÑOL -->
 			<!-- <h3>Esto Podria Ser Un Sueño</h3>
             
 			<p>Mira la luz</p>  -->
 			
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
             <!-- LETRA EN ALEMAN -->
 			<!-- <h3>Es könnte ein Traum sein</h3>
                      
