--- a/songs/thiscouldbeadream.html
+++ b/songs/thiscouldbeadream.html
@@ -102,7 +102,7 @@ p{
 
 <div class="container">
 	<div class="row">
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
 			<h3>This Could Be a Dream</h3>
 
 			<p>Look up at the light</p> 
@@ -153,7 +153,7 @@ p{
 			<p>I know I'm not alone</p> 
 			<p>And if you would come could you take me home?</p> 
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
 			<h3>Esto Podria Ser Un Sueño</h3>
             
 			<p>Mira la luz</p> 
@@ -201,7 +201,7 @@ p{
             <p>Sé que no estoy sola</p>
             <p>Y si vuelves, ¿podrías llevarme a casa?</p>
 		</div>
-		<div class="col-1 col-lg-4">
+		<div class="col-1 col-md-4">
 			<h3>Es könnte ein Traum sein</h3>
                      
 			<p>Schau nach oben, auf das Licht</p> 
