aurora logo proportions

--- a/index.html
+++ b/index.html
@@ -96,12 +96,16 @@ p{
 .col-1{
 	padding: 2%;
 }
+img{
+    width: 50%;
+    padding: 4%;
+}
 
 </Style>
 </head>
 <body>
     <div class="container">
-        <img src="media/AURORA.png" class="center" width="50%" />
+        <img src="media/AURORA.png" class="center"/>
     </div>
     
     <div class="container">
