--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
-<title>Potion for Love</title>
+<title>Halooooo!!!!1!!</title>
 <link rel = "icon" href="/media/icon.jpg" type="image/x-icon">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -135,9 +135,12 @@ img{
                 <button onclick="window.location.href='./songs/existforlove.html'">Listen</button>
             </div>
             <div class="col-1 col-md-4">
-                <h4>Work in progress...</h4>
+                <h1>Life On Mars</h1>
+                <br>
+                <button onclick="window.location.href='./songs/lifeonmars.html'">Listen</button>
             </div>
             <div class="col-1 col-md-4">
+                <h4>Work in progress...</h4>
             </div> 
         </div>
     </div>
