--- a/Aurora.html
+++ b/Aurora.html
@@ -27,41 +27,41 @@
     <link rel="preload" href="./Aurora_files/3fa93dfba46ae9807257.css" as="style">
     <link rel="stylesheet" href="./Aurora_files/3fa93dfba46ae9807257.css" data-n-p=""><noscript
         data-n-css=""></noscript>
-    <link rel="preload" href="./Aurora_files/main-077ac8e4ee3600e31cae.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/webpack-9ca9a1a6a0e3a5fa8cf8.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/framework.d99d6172e6226ce70dc1.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/73a1e449bc099265f40c7275c0627c9341e69bd9.10b20fed2722a467a0a9.js.descarga"
+    <link rel="preload" href="./Aurora_files/main-077ac8e4ee3600e31cae.js" as="script">
+    <link rel="preload" href="./Aurora_files/webpack-9ca9a1a6a0e3a5fa8cf8.js" as="script">
+    <link rel="preload" href="./Aurora_files/framework.d99d6172e6226ce70dc1.js" as="script">
+    <link rel="preload" href="./Aurora_files/73a1e449bc099265f40c7275c0627c9341e69bd9.10b20fed2722a467a0a9.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/6f338904774f22d5fa29a0380859068a5c5af833.e5ebd9a9dc48937a5931.js.descarga"
+    <link rel="preload" href="./Aurora_files/6f338904774f22d5fa29a0380859068a5c5af833.e5ebd9a9dc48937a5931.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/5e69418e490d855d41689ccb4f61858b7fc99161.4187f18ece0c90c01296.js.descarga"
+    <link rel="preload" href="./Aurora_files/5e69418e490d855d41689ccb4f61858b7fc99161.4187f18ece0c90c01296.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/0407ae32dcebc7bde1d28418da16189b619b210a.7fd2c5bc95d8fac9a145.js.descarga"
+    <link rel="preload" href="./Aurora_files/0407ae32dcebc7bde1d28418da16189b619b210a.7fd2c5bc95d8fac9a145.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/_app-2aa7e5247dd448f6f722.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/1f07849e.8f6a4c5f48fdee135be3.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/a1c196c4.8a285bebbcc86b5451d0.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/a9a7754c.45a91f7ae271c6b90d46.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/eaafc78b.9a46c1a899fdd2694624.js.descarga" as="script">
-    <link rel="preload" href="./Aurora_files/6c4a1dca8b61273b0a50d474132f0c7f41b76a61.310028cf31c73f549743.js.descarga"
+    <link rel="preload" href="./Aurora_files/_app-2aa7e5247dd448f6f722.js" as="script">
+    <link rel="preload" href="./Aurora_files/1f07849e.8f6a4c5f48fdee135be3.js" as="script">
+    <link rel="preload" href="./Aurora_files/a1c196c4.8a285bebbcc86b5451d0.js" as="script">
+    <link rel="preload" href="./Aurora_files/a9a7754c.45a91f7ae271c6b90d46.js" as="script">
+    <link rel="preload" href="./Aurora_files/eaafc78b.9a46c1a899fdd2694624.js" as="script">
+    <link rel="preload" href="./Aurora_files/6c4a1dca8b61273b0a50d474132f0c7f41b76a61.310028cf31c73f549743.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/b362b4c63b0334da7d2307a604515e4767504980.c6926ebe0a70c1d5bac8.js.descarga"
+    <link rel="preload" href="./Aurora_files/b362b4c63b0334da7d2307a604515e4767504980.c6926ebe0a70c1d5bac8.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/5fbef8e0c04826ad65e0bfe71b11de83c86a583b.229475772d55a902cf90.js.descarga"
+    <link rel="preload" href="./Aurora_files/5fbef8e0c04826ad65e0bfe71b11de83c86a583b.229475772d55a902cf90.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/a97c9505adeefdd76eabfced945c0892354c79dc.14bc88b9ea5612dd0396.js.descarga"
+    <link rel="preload" href="./Aurora_files/a97c9505adeefdd76eabfced945c0892354c79dc.14bc88b9ea5612dd0396.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/47ff93216fbd16236b67971c46ccb764970539ea.cc281e7d643c133cc295.js.descarga"
+    <link rel="preload" href="./Aurora_files/47ff93216fbd16236b67971c46ccb764970539ea.cc281e7d643c133cc295.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/d4d8029efa75c2a3d8b1750d8dd70378e0eb276e.f7e173fb4fb45142130b.js.descarga"
+    <link rel="preload" href="./Aurora_files/d4d8029efa75c2a3d8b1750d8dd70378e0eb276e.f7e173fb4fb45142130b.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/0797f6a31e2e863fde96e0bbce95fa4d53974c5c.66409ad20984fad8d27e.js.descarga"
+    <link rel="preload" href="./Aurora_files/0797f6a31e2e863fde96e0bbce95fa4d53974c5c.66409ad20984fad8d27e.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/61154748116f4211bc874c0d741cca347c981c11.6dc42f960922512f6e9e.js.descarga"
+    <link rel="preload" href="./Aurora_files/61154748116f4211bc874c0d741cca347c981c11.6dc42f960922512f6e9e.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/698749818f7516c8624c28b4941c01f564916ed2.04c35ada3fb6cd318f85.js.descarga"
+    <link rel="preload" href="./Aurora_files/698749818f7516c8624c28b4941c01f564916ed2.04c35ada3fb6cd318f85.js"
         as="script">
-    <link rel="preload" href="./Aurora_files/v2-f404d694a23fddaf7692.js.descarga" as="script">
+    <link rel="preload" href="./Aurora_files/v2-f404d694a23fddaf7692.js" as="script">
     <style id="__jsx-1241209370">
         body {
             height: 100%;
@@ -164,49 +164,49 @@
             </main>
         </div>
     </div>
-    <script async="" src="./Aurora_files/analytics.js.descarga"></script>
+    <script async="" src="./Aurora_files/analytics.js"></script>
     <script id="__NEXT_DATA__"
         type="application/json">{"props":{"pageProps":{}},"page":"/campaigns/aurora/runner/v2","query":{},"buildId":"Sbns9sDrH3faKi9m-mpvM","nextExport":true,"autoExport":true,"isFallback":false}</script>
-    <script nomodule="" src="./Aurora_files/polyfills-789fa1b74316a15de72a.js.descarga"></script>
-    <script src="./Aurora_files/main-077ac8e4ee3600e31cae.js.descarga" async=""></script>
-    <script src="./Aurora_files/webpack-9ca9a1a6a0e3a5fa8cf8.js.descarga" async=""></script>
-    <script src="./Aurora_files/framework.d99d6172e6226ce70dc1.js.descarga" async=""></script>
-    <script src="./Aurora_files/73a1e449bc099265f40c7275c0627c9341e69bd9.10b20fed2722a467a0a9.js.descarga"
+    <script nomodule="" src="./Aurora_files/polyfills-789fa1b74316a15de72a.js"></script>
+    <script src="./Aurora_files/main-077ac8e4ee3600e31cae.js" async=""></script>
+    <script src="./Aurora_files/webpack-9ca9a1a6a0e3a5fa8cf8.js" async=""></script>
+    <script src="./Aurora_files/framework.d99d6172e6226ce70dc1.js" async=""></script>
+    <script src="./Aurora_files/73a1e449bc099265f40c7275c0627c9341e69bd9.10b20fed2722a467a0a9.js"
         async=""></script>
-    <script src="./Aurora_files/6f338904774f22d5fa29a0380859068a5c5af833.e5ebd9a9dc48937a5931.js.descarga"
+    <script src="./Aurora_files/6f338904774f22d5fa29a0380859068a5c5af833.e5ebd9a9dc48937a5931.js"
         async=""></script>
-    <script src="./Aurora_files/5e69418e490d855d41689ccb4f61858b7fc99161.4187f18ece0c90c01296.js.descarga"
+    <script src="./Aurora_files/5e69418e490d855d41689ccb4f61858b7fc99161.4187f18ece0c90c01296.js"
         async=""></script>
-    <script src="./Aurora_files/0407ae32dcebc7bde1d28418da16189b619b210a.7fd2c5bc95d8fac9a145.js.descarga"
+    <script src="./Aurora_files/0407ae32dcebc7bde1d28418da16189b619b210a.7fd2c5bc95d8fac9a145.js"
         async=""></script>
-    <script src="./Aurora_files/_app-2aa7e5247dd448f6f722.js.descarga" async=""></script>
-    <script src="./Aurora_files/1f07849e.8f6a4c5f48fdee135be3.js.descarga" async=""></script>
-    <script src="./Aurora_files/a1c196c4.8a285bebbcc86b5451d0.js.descarga" async=""></script>
-    <script src="./Aurora_files/a9a7754c.45a91f7ae271c6b90d46.js.descarga" async=""></script>
-    <script src="./Aurora_files/eaafc78b.9a46c1a899fdd2694624.js.descarga" async=""></script>
-    <script src="./Aurora_files/6c4a1dca8b61273b0a50d474132f0c7f41b76a61.310028cf31c73f549743.js.descarga"
+    <script src="./Aurora_files/_app-2aa7e5247dd448f6f722.js" async=""></script>
+    <script src="./Aurora_files/1f07849e.8f6a4c5f48fdee135be3.js" async=""></script>
+    <script src="./Aurora_files/a1c196c4.8a285bebbcc86b5451d0.js" async=""></script>
+    <script src="./Aurora_files/a9a7754c.45a91f7ae271c6b90d46.js" async=""></script>
+    <script src="./Aurora_files/eaafc78b.9a46c1a899fdd2694624.js" async=""></script>
+    <script src="./Aurora_files/6c4a1dca8b61273b0a50d474132f0c7f41b76a61.310028cf31c73f549743.js"
         async=""></script>
-    <script src="./Aurora_files/b362b4c63b0334da7d2307a604515e4767504980.c6926ebe0a70c1d5bac8.js.descarga"
+    <script src="./Aurora_files/b362b4c63b0334da7d2307a604515e4767504980.c6926ebe0a70c1d5bac8.js"
         async=""></script>
-    <script src="./Aurora_files/5fbef8e0c04826ad65e0bfe71b11de83c86a583b.229475772d55a902cf90.js.descarga"
+    <script src="./Aurora_files/5fbef8e0c04826ad65e0bfe71b11de83c86a583b.229475772d55a902cf90.js"
         async=""></script>
-    <script src="./Aurora_files/a97c9505adeefdd76eabfced945c0892354c79dc.14bc88b9ea5612dd0396.js.descarga"
+    <script src="./Aurora_files/a97c9505adeefdd76eabfced945c0892354c79dc.14bc88b9ea5612dd0396.js"
         async=""></script>
-    <script src="./Aurora_files/47ff93216fbd16236b67971c46ccb764970539ea.cc281e7d643c133cc295.js.descarga"
+    <script src="./Aurora_files/47ff93216fbd16236b67971c46ccb764970539ea.cc281e7d643c133cc295.js"
         async=""></script>
-    <script src="./Aurora_files/d4d8029efa75c2a3d8b1750d8dd70378e0eb276e.f7e173fb4fb45142130b.js.descarga"
+    <script src="./Aurora_files/d4d8029efa75c2a3d8b1750d8dd70378e0eb276e.f7e173fb4fb45142130b.js"
         async=""></script>
-    <script src="./Aurora_files/0797f6a31e2e863fde96e0bbce95fa4d53974c5c.66409ad20984fad8d27e.js.descarga"
+    <script src="./Aurora_files/0797f6a31e2e863fde96e0bbce95fa4d53974c5c.66409ad20984fad8d27e.js"
         async=""></script>
-    <script src="./Aurora_files/61154748116f4211bc874c0d741cca347c981c11.6dc42f960922512f6e9e.js.descarga"
+    <script src="./Aurora_files/61154748116f4211bc874c0d741cca347c981c11.6dc42f960922512f6e9e.js"
         async=""></script>
-    <script src="./Aurora_files/698749818f7516c8624c28b4941c01f564916ed2.04c35ada3fb6cd318f85.js.descarga"
+    <script src="./Aurora_files/698749818f7516c8624c28b4941c01f564916ed2.04c35ada3fb6cd318f85.js"
         async=""></script>
-    <script src="./Aurora_files/v2-f404d694a23fddaf7692.js.descarga" async=""></script>
-    <script src="./Aurora_files/_buildManifest.js.descarga" async=""></script>
-    <script src="./Aurora_files/_ssgManifest.js.descarga" async=""></script>
-    <script src="./Aurora_files/musickit.js.descarga" async=""></script>
-    <script src="./Aurora_files/sdk-3.3.2.js.descarga" async=""></script>
+    <script src="./Aurora_files/v2-f404d694a23fddaf7692.js" async=""></script>
+    <script src="./Aurora_files/_buildManifest.js" async=""></script>
+    <script src="./Aurora_files/_ssgManifest.js" async=""></script>
+    <script src="./Aurora_files/musickit.js" async=""></script>
+    <script src="./Aurora_files/sdk-3.3.2.js" async=""></script>
 </body>
 
 </html>
