game final commit

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ img{
             <div class="col-1 col-md-4">
             </div>
             <div class="col-1 col-md-4">
-                <button onclick="window.location.href='Aurora.html'">
+                <button onclick="window.location.href='https://glitch.ge/aurora/runner/v2'">
                     <img src="media/load.gif" alt="this slowpoke moves"  width="50%" />
                     <h2>Click to play</h2>
                 </button>
