--- a/index.html
+++ b/index.html
@@ -163,11 +163,24 @@ img{
                 <button onclick="window.location.href='./songs/lifeonmars.html'">Listen</button>
             </div>
             <div class="col-1 col-md-4">
-                <h4>Work in progress...</h4>
+                <h1>Churchyard</h1>
+                <br>
+                <button onclick="window.location.href='./songs/churchyard.html'">Listen</button>
             </div> 
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-1 col-md-4">
+                <h4>Work in progress...</h4>
+            </div>
+            <div class="col-1 col-md-4">
+            </div>
+            <div class="col-1 col-md-4">
+            </div> 
+        </div>
+    </div>
 <div class="container">
 	<h6>-a page made by Warrior222</h6>
     <img src="media/63.gif" alt="this slowpoke moves"  width="50%" />
