It happend quiet

--- a/index.html
+++ b/index.html
@@ -173,11 +173,19 @@ img{
     <div class="container">
         <div class="row">
             <div class="col-1 col-md-4">
-                <h4>Work in progress...</h4>
+				<h1>Half The World Away</h1>
+                <br>
+                <button onclick="window.location.href='./songs/away.html'">Listen</button>
             </div>
             <div class="col-1 col-md-4">
+                <h1>It Happend Quiet</h1>
+                <br>
+                <button onclick="window.location.href='./songs/quiet.html'">Listen</button>
             </div>
             <div class="col-1 col-md-4">
+                <h1>Murder Song</h1>
+                <br>
+                <button onclick="window.location.href='./songs/murder.html'">Listen</button>
             </div> 
         </div>
     </div>
