--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@ body{
 	font-family: Helvetica;
 	font-size: 16px;
     font-weight: bolder;
-	background-image: url('media/Aurora.jpg');
+    background: #000;
+	background-image: url('media/Aurora2-C.png');
 	min-height: 100vh;
     background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+    background-attachment: fixed;
+    background-size: 100%;
 }
 
 button{
