--- a/songs/potionforlove.html
+++ b/songs/potionforlove.html
@@ -203,6 +203,7 @@ p{
 			<p>Zu vergessen, warum wir uns verliebt haben, tut mir am meisten weh</p>
 		</div>
 	</div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/7z4b-7sYVRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div class="container">
