--- a/songs/away.html
+++ b/songs/away.html
@@ -236,6 +236,7 @@ p{
 			
 		</div>  
 	</div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/SYKU7DfEJT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div class="container">
