logo and colors

--- a/songs/iwenttoofar.html
+++ b/songs/iwenttoofar.html
@@ -44,9 +44,8 @@ body{
 	font-family: Helvetica;
 	font-size: 16px;
 	margin: 0;
-	background: #000;
+	background:	#2f2e2c;
 	min-height: 100vh;
-	background:#000;
 }
 
 button{
