--- a/songs/churchyard.html
+++ b/songs/churchyard.html
@@ -44,9 +44,8 @@ body{
 	font-family: Helvetica;
 	font-size: 16px;
 	margin: 0;
-	background: #000;
+	background: #7f6e50;
 	min-height: 100vh;
-	background:#000;
 }
 
 button{
