--- a/songs/existforlove.html
+++ b/songs/existforlove.html
@@ -44,9 +44,8 @@ body{
 	font-family: Helvetica;
 	font-size: 16px;
 	margin: 0;
-	background: #000;
+	background: #bb7d8e;
 	min-height: 100vh;
-	background:#000;
 }
 
 button{
