--- a/songs/murder.html
+++ b/songs/murder.html
@@ -44,9 +44,8 @@ body{
 	font-family: Helvetica;
 	font-size: 16px;
 	margin: 0;
-	background: #000;
+	background:	#b3b2ae;
 	min-height: 100vh;
-	background:#000;
 }
 
 button{
