--- a/songs/thiscouldbeadream.html
+++ b/songs/thiscouldbeadream.html
@@ -41,9 +41,8 @@ body{
 	font-family: Helvetica;
 	font-size: 16px;
 	margin: 0;
-	background: #000;
+	background: #a1302e;
 	min-height: 100vh;
-	background:#000;
 }
 
 button{
